Fix timeline jumping

--- a/demos/analyzer/src/Waveform.css
+++ b/demos/analyzer/src/Waveform.css
@@ -31,6 +31,7 @@
 }
 
 .Waveform__timeline {
+  height: 16px;
   margin-bottom: 16px;
   opacity: .75;
 }
